added fonts; changed letters btn logic to be selectable; added diamond shape; refactored js to have more atomic modular functions

--- a/index.html
+++ b/index.html
@@ -2,16 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>💎 DOL 💎</title>
-    <link rel="stylesheet" href="src/style.css">
+    <title>Dior</title>
+
+    <!-- Link to favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Raleway&display=swap"
+        rel="stylesheet"
+    >
+
+    <link rel="stylesheet" href="src/styles/style.css">
 </head>
 <body>
-    <h1>💎 Diamond of Letters Generator 💎</h1>
+    <header>
+        <h1>Dior</h1>
+        <h2>Get your diamond</h2>
+    </header>
 
-    <div class="letters-container"></div>
-    <div class="letters-container"></div>
-
-    <div class="diamond-container"></div>
+    <main>
+        <div class="letters-container"></div>
+        <div class="letters-container"></div>
+    </main>
 
     <script type="module" src="src/main.ts"></script>
     <script type="module" src="src/utils.ts"></script>
